--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hydrotech</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Logo plombier.webp" type="image/x-icon">
 </head>
+
 <body>
-    
+    <img class="Logo" src="Logo plombier.webp" alt="image" height="75" width="75">
+
+    <nav class="menu">
+        <a href="#a-propos">A propos</a>
+
+        <a href="#services">Nos service</a>
+
+        <a href="#contact">Contact</a>
+
+        <a href="#galerie">Galerie</a>
+    </nav>
+
+
+
+
+
+    <head>
+        <h1>
+            HIDROTECH
+        </h1>
+        <p>
+            Plombier qualifié avec plusieurs années d’expérience,
+            spécialisé dans l’installation,
+            la maintenance et le dépannage de systèmes de plomberie,
+            garantissant un travail fiable, soigné et conforme aux normes.
+        </p>
+
+
+    </head>
+
+    <img class="corps" src="image 1.webp" alt="image" height="400" width="400">
+    <img class="corps" src="Frame 6.webp" alt="image" height="400" width="400"> <br>
+    <img class="corps" src="Frame 7.webp" alt="image" height="400" width="400">
+    <img class="corps" src="image 3.webp" alt="image" height="400" width="400">
+    <br>
+    <button>
+        Nous contacter
+    </button>
+
+
+    <footer>
+        <img class="footer" src="devicon_facebook.webp" alt="image" height="75" width="75">
+        <img class="footer" src="skill-icons_instagram.webp" alt="image" height="75" width="75">
+    </footer>
+
 </body>
+
 </html>
