--- a/index.html
+++ b/index.html
@@ -11,50 +11,46 @@
 </head>
 
 <body>
-    <img class="Logo" src="Logo plombier.webp" alt="image" height="75" width="75">
+    <Header>
+        <img class="Logo" src="Logo plombier.webp" alt="image" height="75" width="75">
+        <nav>
+            <ul>
+                <a href="#Apropos">A propos</a>
+                <a href="#Nosservice">Nos services</a>
+                <a href="#Contact">Contact</a>
+                <a href="#Galerie">Galerie</a>
+            </ul>
 
-    <nav class="menu">
-        <a href="#a-propos">A propos</a>
+        </nav>
 
-        <a href="#services">Nos service</a>
-
-        <a href="#contact">Contact</a>
-
-        <a href="#galerie">Galerie</a>
-    </nav>
-
-
-
-
-
-    <head>
-        <h1>
-            HIDROTECH
-        </h1>
+    </Header>
+    <main>
+        <h1>HYDROTECH</h1>
         <p>
             Plombier qualifié avec plusieurs années d’expérience,
             spécialisé dans l’installation,
-            la maintenance et le dépannage de systèmes de plomberie,
-            garantissant un travail fiable, soigné et conforme aux normes.
+            la maintenance et le dépannage de systèmes de plomberie, garantissant un travail fiable, soigné et conforme
+            aux normes.
         </p>
+    </main>
+    <section>
+        <img class="corps" src="image 1.webp" alt="image" height="400" width="400">
+        <img class="corps" src="Frame 6.webp" alt="image" height="400" width="400">
+        <img class="corps" src="Frame 7.webp" alt="image" height="400" width="400">
+        <img class="corps" src="image 3.webp" alt="image" height="400" width="400">
+    </section>
 
 
-    </head>
+    </main>
 
-    <img class="corps" src="image 1.webp" alt="image" height="400" width="400">
-    <img class="corps" src="Frame 6.webp" alt="image" height="400" width="400"> <br>
-    <img class="corps" src="Frame 7.webp" alt="image" height="400" width="400">
-    <img class="corps" src="image 3.webp" alt="image" height="400" width="400">
-    <br>
-    <button>
-        Nous contacter
-    </button>
+    <button> Nous contacter </button>
 
 
     <footer>
         <img class="footer" src="devicon_facebook.webp" alt="image" height="75" width="75">
         <img class="footer" src="skill-icons_instagram.webp" alt="image" height="75" width="75">
     </footer>
+
 
 </body>
 
