--- a/Hydrotech accueil.html
+++ b/Hydrotech accueil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hydrotech</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Hydrotech accueil.css">
     <link rel="shortcut icon" href="Logo plombier.webp" type="image/x-icon">
 </head>
 
@@ -20,11 +20,11 @@
                 <a href="#Contact">Contact</a>
                 <a href="#Galerie">Galerie</a>
             </ul>
-
         </nav>
 
-    </Header>
-    <main>
+    </Header><br><br><br><br>
+    
+    <main class="hero">
         <h1>HYDROTECH</h1>
         <p>
             Plombier qualifié avec plusieurs années d’expérience,
@@ -43,7 +43,7 @@
 
     </main>
 
-    <button> Nous contacter </button>
+    <button> Nous contacter </button> <br><br><br><br>
 
 
     <footer>
