changement de derniere minute LOL

--- a/Hydrotech A propos.html
+++ b/Hydrotech A propos.html
@@ -24,11 +24,11 @@
         </nav>
 
 
-    </Header><br><br><br><br>
+    </Header><br><br>
     <main class="hero">
         <h1>HYDROTECH</h1>
 
-    </main><br><br>
+    </main>
     <nav class="nav1">
         <img src="photo a propos.webp" alt="Jean-Michel TUYAU" width="250" height="250">
         <p>Jean-Michel TUYAU <br>
@@ -40,7 +40,7 @@
             J’interviens également sur les systèmes de chauffage, chaudières, ventilation et dépannage d’urgence.
             Sérieux et expérimenté, je garantis un travail soigné, fiable et conforme aux normes.
         </p>
-    </nav><br><br><br><br>
+    </nav>
 
     <nav class="nav2">
         <p class="Tchiant">
@@ -50,7 +50,7 @@
             chacun.
         </p>
         <img src="a propos 2.webp" alt="img A propos 1" width="250" height="250">
-    </nav><br><br><br><br>
+    </nav>
 
     <nav class="nav3">
         <img src="a propos 3.webp" alt="img A propos 2" width="250" height="250">
@@ -63,7 +63,7 @@
         </p>
     </nav>
 
-    <br><br><br><br>
+    
     <footer>
         <img class="footer" src="devicon_facebook.webp" alt="image" height="75" width="75">
         <img class="footer" src="skill-icons_instagram.webp" alt="image" height="75" width="75">
