--- a/Hydrotech A propos.html
+++ b/Hydrotech A propos.html
@@ -7,12 +7,12 @@
     <title>Hydrotech</title>
 
     <link rel="stylesheet" href="Hydrotech A propos.css">
-    <link rel="shortcut icon" href="Logo plombier.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="./Images/Logo plombier.webp" type="image/x-icon">
 </head>
 
 <body>
     <Header>
-        <img class="Logo" src="Logo plombier.webp" alt="Logo" height="75" width="75">
+        <img class="Logo" src="./Images/Logo plombier.webp" alt="Logo" height="75" width="75">
         <nav>
             <ul>
                 <a href="#Apropos">A propos</a>
@@ -30,7 +30,7 @@
 
     </main>
     <nav class="nav1">
-        <img src="photo a propos.webp" alt="Jean-Michel TUYAU" width="250" height="250">
+        <img src="./Images/photo a propos.webp" alt="Jean-Michel TUYAU" width="250" height="250">
         <p>Jean-Michel TUYAU <br>
             Plombier depuis 2005 <br>
 
@@ -49,11 +49,11 @@
             fournir des prestations soignées, durables et conformes aux normes, afin de garantir la satisfaction de
             chacun.
         </p>
-        <img src="a propos 2.webp" alt="img A propos 1" width="250" height="250">
+        <img src="./Images/a propos 2.webp" alt="img A propos 1" width="250" height="250">
     </nav>
 
     <nav class="nav3">
-        <img src="a propos 3.webp" alt="img A propos 2" width="250" height="250">
+        <img src="./Images/a propos 3.webp" alt="img A propos 2" width="250" height="250">
         <p>
             Nous accordons une grande importance à la qualité de notre travail et au contrôle de chaque intervention.
             Chaque chantier est réalisé avec rigueur, précision et dans le respect des normes en vigueur.
@@ -65,8 +65,8 @@
 
     
     <footer>
-        <img class="footer" src="devicon_facebook.webp" alt="image" height="75" width="75">
-        <img class="footer" src="skill-icons_instagram.webp" alt="image" height="75" width="75">
+        <img class="footer" src="./Images/devicon_facebook.webp" alt="Facebook" height="75" width="75">
+        <img class="footer" src="./Images/skill-icons_instagram.webp" alt="Instagram" height="75" width="75">
     </footer>
 
 
